// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accordion > renders accordion with auto-collapse true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders accordion with icons 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__leading"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-1[0]-2-1-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs[39m
                [33mdata-marko-key[39m=[32m"@defs s0-0-1[0]-2-1-0"[39m
              [36m>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-lightbulb-24"[39m
                  [33mviewBox[39m=[32m"0 0 24 24"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"m8.039 18.279-.035-.105c-.226-.68-.357-1.072-.574-1.525-.232-.486-.574-1.063-1.262-2.094l-.052-.078C5.148 13.026 4 11.304 4 9a8 8 0 1 1 16 0c0 2.304-1.148 4.026-2.116 5.477l-.052.078c-.688 1.031-1.03 1.608-1.262 2.094-.217.453-.348.845-.574 1.525l-.035.105-.612 2.449A3 3 0 0 1 12.439 23h-.877a3 3 0 0 1-2.91-2.272l-.613-2.45ZM6 9a6 6 0 1 1 12 0c0 1.654-.81 2.913-1.832 4.445-.699 1.049-1.107 1.722-1.403 2.341-.197.412-.34.792-.485 1.214H13v-5.586l1.707-1.707a1 1 0 0 0-1.414-1.414L12 9.586l-1.293-1.293a1 1 0 0 0-1.414 1.414L11 11.414V17H9.72a10.93 10.93 0 0 0-.485-1.214c-.296-.619-.704-1.292-1.403-2.34C6.811 11.912 6 10.653 6 9Zm7.72 10h-3.44l.311 1.243a1 1 0 0 0 .97.757h.877a1 1 0 0 0 .97-.757L13.72 19Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-lightbulb-24"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__leading"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-1[1]-2-3-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs[39m
                [33mdata-marko-key[39m=[32m"@defs s0-0-1[1]-2-3-0"[39m
              [36m>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-graph-24"[39m
                  [33mviewBox[39m=[32m"0 0 24 24"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M3 3a1 1 0 0 0-2 0v16a3 3 0 0 0 3 3h18a1 1 0 1 0 0-2H4a1 1 0 0 1-1-1V3Zm2.263 12.324 5.495-5.995.02-.02a.997.997 0 0 1 1.434-.011l2.261 2.261 5.794-6.24a1 1 0 0 1 1.466 1.361l-6.496 6.996a.995.995 0 0 1-1.15.235.997.997 0 0 1-.298-.208l-2.258-2.257-4.794 5.23a1 1 0 0 1-1.474-1.352Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-graph-24"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__leading"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-1[2]-2-5-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs[39m
                [33mdata-marko-key[39m=[32m"@defs s0-0-1[2]-2-5-0"[39m
              [36m>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-pencil-24"[39m
                  [33mviewBox[39m=[32m"0 0 24 24"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M16.206 1.166a3.98 3.98 0 1 1 5.628 5.628L7.976 20.653a.996.996 0 0 1-.51.272L2.192 21.98a.995.995 0 0 1-1.171-1.17l1.055-5.277a.998.998 0 0 1 .272-.509L16.206 1.166ZM17.613 8.2l-2.814-2.814L3.54 16.644l-.703 3.518 3.518-.703L17.613 8.2Zm2.814-5.628a1.99 1.99 0 0 0-2.814 0L16.206 3.98l2.814 2.814 1.407-1.407a1.99 1.99 0 0 0 0-2.814Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-pencil-24"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders accordion with large size 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion accordion--large"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders accordion with localized role description 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"Akkordeon"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders default accordion 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;
